Fix: modal windows not display correctly on small browser screen

--- a/sources/js/components/Modal/Modal.module.css
+++ b/sources/js/components/Modal/Modal.module.css
@@ -88,9 +88,8 @@
 .alert-modal-window {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    row-gap: 15px;
+    row-gap: 16px;
     width: 320px;
     height: var(--modal-window-height);
     max-width: calc(100% - var(--modal-window-margin));
@@ -102,13 +101,14 @@
     text-align: center;
     background-color: var(--modal-window-background-color);
     box-shadow: 0px 0px 8px 4px var(--popup-window-shadow-color);
-    overflow: hidden;
+    overflow: auto;
     will-change: opacity, transform;
     filter: blur(0);
     -webkit-filter: blur(0);
 }
 
 .alert-modal-window .icon {
+    flex-shrink: 0;
     width: 85px;
 }
 .alert-modal-window.success .icon {
